--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
-jobs:
-  include:
-    - script: mvn test # uses the default stage name "test"
+language: java
+java:
+ - script: mvn test # uses the default stage name "test"
